# lib-persist

./: Cargo.toml  structure.cql
derive/: Cargo.toml
derive/src/: lib.rs  scylla.rs
derive/src/scylla/: from.rs  scylla_field.rs  scylla_row.rs  struct_.rs  try_from.rs
src/: scylla.rs
