[workspace]

resolver = "2"

members = ["./", "./derive"]

[workspace.lints.clippy]
large_futures = "allow"
missing_errors_doc = "allow"
all = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[package]
name = "lib-persist"
version = "0.1.0"
edition = "2024"

[dependencies]
base62 = { version = "2.2.2", default-features = false, features = ["alloc"] }
futures = { version = "0.3.31", default-features = false }
itertools = { version = "0.14.0", default-features = false, features = ["use_alloc"] }
lib-persist-derive = { version = "0.1.0", path = "./derive", default-features = false }
scylla = { version = "1.3.1", default-features = false, features = ["time-03", "bigdecimal-04", "secrecy-08"] }
serde = { version = "1.0.219", default-features = false }
thiserror = { version = "2.0.16", default-features = false }
time = { version = "0.3.42", default-features = false, features = ["std"] }
tinytemplate = { version = "1.2.1", default-features = false }
toml = { version = "0.9.5", features = ["parse"] }
tracing = { version = "0.1.41", default-features = false, features = ["attributes"] }
uuid = { version = "1.18.0", default-features = false }

[lints]
workspace = true
